# Scrapped

./: CUsersPEDRO  SETUP.md  SPEC.md  install_deps.bat  session-ses_299a.md  session-ses_29a2.md  session-ses_29ac.md
.kilo/plans/: 1775519319909-shiny-orchid.md
backend/: .env  .env.example  pyproject.toml  test_async_db.py  test_db.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  auth.py  connections.py  search.py
backend/app/core/: database.py  deps.py  encryption.py  security.py  settings.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  classifier.py  google_scraper.py  linkedin_scraper.py  merger.py  receita_federal.py
backend/app/tasks/: scraper.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: PrivateRoute.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  label.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: CallbackPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  LoginPage.tsx
