[tool.poetry]
name = "scrapped-backend"
version = "0.1.0"
description = "API backend for Scrapped - Business Decision Maker Intelligence"
authors = ["Scrapped Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
authlib = "^1.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.6"
celery = "^5.3.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
spacy = "^3.7.0"
sentence-transformers = "^2.2.0"
langdetect = "^1.0.9"
unidecode = "^1.3.0"
playwright = "^1.40.0"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
scrapy = "^2.11.0"
googlesearch-python = "^1.1.0"
pandas = "^2.1.0"
rapidfuzz = "^3.6.0"
geopy = "^2.4.0"
phonenumbers = "^8.13.0"
pyisemail = "^2.1.1"
tldextract = "^5.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"